--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div id="particles-js" style="width: 100%;height: 100%;"></div>
   <div class="main-content" id="panel">
-    <nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom">
+    <nav class="navbar navbar-top navbar-expand navbar-dark nav-bg-dark border-bottom">
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
@@ -48,122 +48,123 @@
     <div class="pl-lg-4 mt-3">
       <div class="row" style="display: flex;margin-left: 0px;margin-right: 0px;flex-wrap: nowrap;">
         <div class="col-lg-6">
-          <div class="form-group" style="text-align: right;direction: rtl;margin-bottom: 10px;">
-            <label class="form-control-label" for="input-username">طلای اب شده</label>
-            <input type="numeric" id="input-username" class="form-control" placeholder="قیمت طلای آب شده">
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="form-group" style="text-align: right;direction: rtl;margin-bottom: 10px;">
-            <label class="form-control-label" for="input-email">سکه امامی</label>
-            <input type="numeric" id="input-email" class="form-control" placeholder="قیمت بروز سکه امامی">
+          <div class="form-group" style="text-align: right;direction: rtl;">
+            <label class="form-control-label" for="input-first-name">قیمت طلای آب شده</label>
+            <input type="numeric" id="input-first-name" class="form-control inputsStyleCustome" placeholder="قیمت طلای آب شده را وارد کنید">
           </div>
         </div>
       </div>
       <div class="row" style="display: flex;margin-left: 0px;margin-right: 0px;flex-wrap: nowrap;">
         <div class="col-lg-6">
-          <div class="form-group" style="text-align: right;direction: rtl;">
-            <label class="form-control-label" for="input-first-name">قیمت دلار</label>
-            <input type="numeric" id="input-first-name" class="form-control" placeholder="قیمت دلار">
+          <div class="form-group" style="text-align: right;direction: rtl;margin-bottom: 22px;">
+            <label class="form-control-label" for="input-username">قیمت دلار</label>
+            <input type="numeric" id="input-username" class="form-control inputsStyleCustome" placeholder="قیمت دلار را وارد کنید">
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="form-group" style="text-align: right;direction: rtl;margin-bottom: 10px;">
+            <label class="form-control-label" for="input-email">سکه امامی</label>
+            <input type="numeric" id="input-email" class="form-control inputsStyleCustome" placeholder="قیمت سکه را وارد کنید">
           </div>
         </div>
       </div>
+      
     </div>
     <div class="header bg-primary pb-6">
       <div class="container-fluid">
         <div class="header-body">
           <div class="row">
-            <div class="col-xl-2 col-md-3 col-12 d-flex justify-content-center align-items-center">
-              <div class="card card-stats customeStyles mr-2">
+            <div class="settingTheBestSize col-xl-2 col-md-3 col-12 d-flex justify-content-center align-items-center">
+              <div class="card card-stats customeStyles mr-2 col-6">
                 <div class="card-bodyd d-flex flex-column">
                   <div class="row d-flex justify-content-center flex-column">
                     <div class="col-auto d-flex justify-content-center flex-column align-items-center">
-                      <div class="icon icon-shape bg-gradient-info text-white rounded-circle shadow">
+                      <div class="icon icon-shape bg-gradient-primary text-white rounded-circle shadow">
                         <i class="ni ni-bag-17"></i>
                       </div>
                     </div>
                     <div class="col d-flex justify-content-center flex-column align-items-center">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                      <span class="h2 font-weight-bold mb-0">4965</span>
+                      <h5 class="cardTitleCustome card-title text-uppercase text-muted mb-0">خرید</h5>
+                      <span class="cardsNumbers h2 font-weight-bold mb-0">4965</span>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="card card-stats customeStyles ml-2">
+              <div class="card card-stats customeStyles ml-2  col-6">
                 <div class="card-bodyd d-flex flex-column">
                   <div class="row d-flex justify-content-center flex-column">
                     <div class="col-auto d-flex justify-content-center flex-column align-items-center">
-                      <div class="icon icon-shape bg-gradient-info2 text-white rounded-circle shadow">
+                      <div class="icon icon-shape bg-gradient-primary text-white rounded-circle shadow">
                         <i class="ni ni-money-coins"></i>
                       </div>
                     </div>
                     <div class="col d-flex justify-content-center flex-column align-items-center">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                      <span class="h2 font-weight-bold mb-0">4965</span>
+                      <h5 class="cardTitleCustome card-title text-uppercase text-muted mb-0">فروش</h5>
+                      <span class="cardsNumbers h2 font-weight-bold mb-0">4965</span>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-xl-2 col-md-3 col-12 d-flex justify-content-center align-items-center">
-              <div class="card card-stats customeStyles mr-2">
+            <div class="settingTheBestSize col-xl-2 col-md-3 col-12 d-flex justify-content-center align-items-center">
+              <div class="card card-stats customeStyles mr-2  col-6">
                 <div class="card-bodyd d-flex flex-column">
                   <div class="row d-flex justify-content-center flex-column">
                     <div class="col-auto d-flex justify-content-center flex-column align-items-center">
-                      <div class="icon icon-shape bg-gradient-info3 text-white rounded-circle shadow">
+                      <div class="icon icon-shape bg-gradient-primary text-white rounded-circle shadow">
                         <i class="ni ni-delivery-fast"></i>
                       </div>
                     </div>
                     <div class="col d-flex justify-content-center flex-column align-items-center">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                      <span class="h2 font-weight-bold mb-0">4965</span>
+                      <h5 class="cardTitleCustome card-title text-uppercase text-muted mb-0">دریافت</h5>
+                      <span class="cardsNumbers h2 font-weight-bold mb-0">4965</span>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="card card-stats customeStyles ml-2">
+              <div class="card card-stats customeStyles ml-2  col-6">
                 <div class="card-bodyd d-flex flex-column">
                   <div class="row d-flex justify-content-center flex-column">
                     <div class="col-auto d-flex justify-content-center flex-column align-items-center">
-                      <div class="icon icon-shape bg-gradient-info4 text-white rounded-circle shadow">
+                      <div class="icon icon-shape bg-gradient-primary text-white rounded-circle shadow">
                         <i class="ni ni-credit-card"></i>
                       </div>
                     </div>
                     <div class="col d-flex justify-content-center flex-column align-items-center">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                      <span class="h2 font-weight-bold mb-0">4965</span>
+                      <h5 class="cardTitleCustome card-title text-uppercase text-muted mb-0">برداشت</h5>
+                      <span class="cardsNumbers h2 font-weight-bold mb-0">4965</span>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-xl-2 col-md-3 col-12 d-flex justify-content-center align-items-center">
-              <div class="card card-stats customeStyles mr-2">
+            <div class="settingTheBestSize col-xl-2 col-md-3 col-12 d-flex justify-content-center align-items-center">
+              <div class="card card-stats customeStyles mr-2  col-6">
                 <div class="card-bodyd d-flex flex-column">
                   <div class="row d-flex justify-content-center flex-column">
                     <div class="col-auto d-flex justify-content-center flex-column align-items-center">
-                      <div class="icon icon-shape bg-gradient-info5 text-white rounded-circle shadow">
+                      <div class="icon icon-shape bg-gradient-primary text-white rounded-circle shadow">
                         <i class="ni ni-single-02"></i>
                       </div>
                     </div>
                     <div class="col d-flex justify-content-center flex-column align-items-center">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                      <span class="h2 font-weight-bold mb-0">4965</span>
+                      <h5 class="cardTitleCustome card-title text-uppercase text-muted mb-0">مشتریان</h5>
+                      <span class="cardsNumbers h2 font-weight-bold mb-0">4965</span>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="card card-stats customeStyles ml-2">
+              <div class="card card-stats customeStyles ml-2  col-6">
                 <div class="card-bodyd d-flex flex-column">
                   <div class="row d-flex justify-content-center flex-column">
                     <div class="col-auto d-flex justify-content-center flex-column align-items-center">
-                      <div class="icon icon-shape bg-gradient-info6 text-white rounded-circle shadow">
+                      <div class="icon icon-shape bg-gradient-primary text-white rounded-circle shadow">
                         <i class="ni ni-archive-2"></i>
                       </div>
                     </div>
                     <div class="col d-flex justify-content-center flex-column align-items-center">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                      <span class="h2 font-weight-bold mb-0">4965</span>
+                      <h5 class="cardTitleCustome card-title text-uppercase text-muted mb-0">گزارش</h5>
+                      <span class="cardsNumbers h2 font-weight-bold mb-0">4965</span>
                     </div>
                   </div>
                 </div>
